--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "league-simulation",
+  "name": "league-simulator",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:league-simulation": "node dist/league-simulation/server/server.mjs"
+    "serve:ssr:league-simulator": "node dist/league-simulator/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -20,7 +20,12 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.4",
+    "@nguniversal/express-engine": "^7.0.2",
+    "@ngxs/devtools-plugin": "^19.0.0",
+    "@ngxs/store": "^19.0.0",
     "express": "^4.18.2",
+    "primeicons": "^7.0.0",
+    "primeng": "^19.0.10",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
