--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nguniversal/express-engine": "^7.0.2",
     "@ngxs/devtools-plugin": "^19.0.0",
     "@ngxs/store": "^19.0.0",
+    "@primeng/themes": "^19.0.10",
     "express": "^4.18.2",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.10",
